# mcp-mongo-memory

./: .bumpversion.cfg  .gitignore  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/rules/: 0000-main.mdc  0001-mongo-memory-usage.mdc  2001-docstrings-and-types.mdc  3001-mcp-server-verification.mdc  3002-mcp-tool-verification.mdc  4000-ruff.mdc
.github/workflows/: release.yml
src/mongo_memory/: __init__.py  cli.py  main.py  mongo_connector.py  response_utils.py
src/mongo_memory/constants/: __init__.py  instructions.py  usage_guide.py
tests/: test_entities.py  test_relationships.py
